internal/lang/testdata/conformance/accept/page_with_metadata.gwdk
package pages

route "/about"
title "About"
description "About this site"

view {
  <main>
    <p>About us.</p>
  </main>
}
