internal/lang/testdata/conformance/reject/unknown_top_level_block.gwdk
// expect: unsupported_top_level_block
package pages

route "/"

frobnicate {
  doStuff()
}

view {
  <main></main>
}
